--- a/src/Calculatrice/calculatrice.module.scss
+++ b/src/Calculatrice/calculatrice.module.scss
@@ -1,6 +1,5 @@
 .calculator {
   height: 100%;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,4 +26,11 @@
 
 .operator {
   margin: 10px;
+}
+
+.operation {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  font-size: 10px;
 }
