--- a/src/Calculatrice/calculatrice.module.scss
+++ b/src/Calculatrice/calculatrice.module.scss
@@ -1,36 +1,62 @@
-.calculator {
-  height: 100%;
+.calculatorProject {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  font-size: 40px;
 }
-
-.number {
-  margin: 10px;
-  cursor: pointer;
+.title {
+  font-family: "Courier New", Courier, monospace;
 }
-
-.result {
-  margin-top: 20px;
+.calculator {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #0d717a;
+  border: 3px solid black;
+  border-radius: 20px;
+  height: 440px;
+  width: 340px;
 }
 
 .operators {
-  margin-top: 20px;
+  margin-top: 30px;
   display: flex;
-  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
-.operator {
-  margin: 10px;
+.numbers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.operation {
-  margin-top: 20px;
+.buttonOperator {
+  width: 30%;
+}
+
+.buttonStyle {
+  cursor: pointer;
+  color: white;
+  font-size: 16px;
+  font-family: "Courier New", Courier, monospace;
+  border: none;
+  width: 90%;
+  height: 22px;
+  border-radius: 20px;
+  background: rgb(116, 116, 116);
+  border: 1px black solid;
+  margin-bottom: 20px;
+}
+.result {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 30px;
+  margin: 30px 5px 5px 5px;
+  border-radius: 20px;
+  color: #00ff0d;
   display: flex;
-  justify-content: center;
-  font-size: 10px;
+  height: 10vh;
+  justify-content: flex-end;
+  padding-right: 10px;
+  align-items: center;
+  background: black !important;
 }
